Google map, Facebook login

--- a/MyAppFF/app/src/main/AndroidManifest.xml
+++ b/MyAppFF/app/src/main/AndroidManifest.xml
@@ -37,8 +37,8 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyARxZmq0btxFIGXSskSkvtCyKjmIYyG7x4" />
 
-        <activity android:name=".InforUserActivity" />
         <activity android:name=".FindFriendActivity" />
+        <activity android:name=".ListFriendRqActivity" />
         <activity android:name=".ListFriendActivity"></activity>
     </application>
 
