--- a/MyAppFF/app/src/main/AndroidManifest.xml
+++ b/MyAppFF/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -37,9 +37,12 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyARxZmq0btxFIGXSskSkvtCyKjmIYyG7x4" />
 
+        <activity android:name=".MainActivity" />
         <activity android:name=".FindFriendActivity" />
         <activity android:name=".ListFriendRqActivity" />
-        <activity android:name=".ListFriendActivity"></activity>
+        <activity android:name=".ListFriendActivity" />
+        <activity android:name=".InfUserActivity" />
+        <activity android:name=".InfFriendActivity"></activity>
     </application>
 
 </manifest>
