--- a/MyAppFF/app/src/main/AndroidManifest.xml
+++ b/MyAppFF/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
         <activity android:name=".ListFriendActivity" />
         <activity android:name=".InfUserActivity" />
         <activity android:name=".InfFriendActivity" />
-        <activity android:name=".ListLocationRqActivity"></activity>
+        <activity android:name=".ListLocationRqActivity" />
+        <activity android:name=".EditInfActivity"></activity>
     </application>
 
 </manifest>
